# CourseworkBasic

./: EasternRace.sln  README.md
EasternRace/: CMakeLists.txt  Check.cpp  Check.h  EasternRace.cpp  EasternRace.vcxproj  EasternRace.vcxproj.filters  Error.cpp  Error.h
EasternRaceCmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  EasternRace.sln  EasternRace.vcxproj  EasternRace.vcxproj.filters  RaceLib.vcxproj  RaceLib.vcxproj.filters  VehicleLib.vcxproj  VehicleLib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
RaceLib/: Race.cpp  Race.h  RaceLib.vcxproj  RaceLib.vcxproj.filters  RaceResult.cpp  RaceResult.h
VehicleLib/: AirVehicle.cpp  AirVehicle.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  LandVehicle.cpp  LandVehicle.h  MagicCarpet.cpp  MagicCarpet.h  RoverBoots.cpp  RoverBoots.h  VehicleLib.vcxproj  VehicleLib.vcxproj.filters
